...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/button_for_pick_color_meeting"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldSubject"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_components"
            android:backgroundTint="@color/cyan_500"
            android:clickable="true"
...
                android:labelFor="@+id/textFieldSubject"
                android:textSize="@dimen/text_size" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldListEmails"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_list_email_input"
            android:layout_marginTop="@dimen/margin_top_components"
            android:hint="@string/hint_list_email"

...
